--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,2 @@
-github: [auguwu]
-custom: ["https://paypal.me/auguwu"]
+github: [auguwu, Noelware]
+custom: ["https://paypal.me/auguwu", "https://noelware.org"]
